styles: fixed color/contrast, container positioning and supported flex prop

--- a/src/styles/components/Mission.module.scss
+++ b/src/styles/components/Mission.module.scss
@@ -41,6 +41,7 @@
 .img-wrap-1 {
   height: 200px;
   width: 100%;
+  position: relative;
 }
 .flex-content {
   display: flex;
@@ -59,6 +60,7 @@
 .img-wrap-2 {
   height: 240px;
   width: auto;
+  position: relative;
 }
 
 .content-2 {
@@ -70,6 +72,7 @@
 
 .img-wrap-3 {
   height: 200px;
+  position: relative;
 }
 
 .content-3 {
