--- a/src/styles/components/Work.module.scss
+++ b/src/styles/components/Work.module.scss
@@ -26,7 +26,7 @@
           gap: 5px;
           margin-bottom: 1.1em;
           .testimonial {
-            color: #8f8f8f;
+            color: #666666;
           }
         }
         .author {
